refactor project structure and logic
